oops, fixed the target of download button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Our Pitch Deck target="_blank"</a>
+        <a href="{{ site.github.zip_url }}" target="_blank" class="btn">Our Pitch Deck</a>
       {% endif %}
     </header>
 
