--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">Expreta</h1>
-      <h2 class="project-tagline">A nice description!</h2>
+      <h2 class="project-tagline">A web application made to retain talents in your organization</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
