--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" target="_blank" class="btn">Our Pitch Deck</a>
+        <a href="{{ site.github.pitch_deck }}" target="_blank" class="btn">Our Pitch Deck</a>
+        <a href="{{ site.github.contact_us }}" class="btn">Contact Us</a>
       {% endif %}
     </header>
 
